fixed fluid container overflow across site

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,7 @@
 .navbar-lewagon {
   justify-content: space-between;
   background: white;
+  margin: 2rem;
 }
 
 .navbar-lewagon .navbar-collapse {
