--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -14,7 +14,7 @@
 .header__dashboard {
   margin-bottom: 1.5rem;
   padding: 2rem 0;
-  width: auto;
+  width: 100%;
   background-color: $primary-blue;
   color: $white;
   border-bottom-left-radius: $font-size-base * 3;
