--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,8 +2,11 @@
 // test. {
 //   background-color: red;
 // }
+
 .container-fluid {
   padding: 0;
+  width: 100%;
+  overflow: hidden;
 }
 
 .home-container {
@@ -12,7 +15,7 @@
   background-position: center;
   height: 100vh;
   display:flex;
-  width:100%
+  width:auto;
 }
 
 .bottom-left {
@@ -59,6 +62,8 @@ text-align: center;
 .header__home {
   background-color: #5A96B8;
   color:white;
+  margin: 8rem;
+  width: auto;
 }
 
 .cloud-icon {
